[project]
name = "liteyukibot"
version = "7.0.0"
description = "neo-liteyukibot is coming soon!"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "loguru>=0.7.3",
    "nonecorn>=0.17.3",
    "pydantic>=2.11.3",
    "pyyaml>=6.0.2",
    "uvicorn>=0.34.2",
    "yukilog>=0.1.1",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pip>=25.1",
    "pytest>=8.3.5",
    "ruff>=0.11.7",
]

# build
[build-system]
requires = ["pdm-backend >= 2.4.0"]
build-backend = "pdm.backend"

[tool.ruff]
line-length = 80
src = ["liteyukibot", "main.py"]

# index and sources
[[tool.uv.index]]
name = "liteyuki-pypi"
url = "https://git.liteyuki.icu/api/packages/LiteyukiStudio/pypi/simple"
publish-url = "https://git.liteyuki.icu/api/packages/LiteyukiStudio/pypi"
explicit = true

[tool.uv.sources]
yukilog = [
  { index = "liteyuki-pypi" },
]
